pkl-core/src/test/files/LanguageSnippetTests/input/errors/mappingTypeCheckError5.pkl
// GeneratorObjectLiteralNode
res: Mapping<String, String> = new {
  when (false) {
    ["foo"] = "foo"
  }
  [1] = "foo"
}
